# FastApi_test_task_cft

./: Dockerfile  Makefile  README.md  _create_migrations.py  _migrate.py  constans.py  create_migrations.py  custom_logger.py  docker-compose-ci.yaml  main.py  pyproject.toml
api/: get_data_handler.py  handlers.py  login_handler.py  models.py
api/auth/: auth.py  hashing.py  token.py
db/: dals.py  model.py  session.py
migrations/: env.py
tests/: conftest.py  test_account_handler.py  test_login_habdler.py
tests/migrations/: env.py
